[package]
name = "shapers"
version = "0.3.1"
license-file = "LICENSE"
description = "A library for fitting shapes and operations on geometrical objects"
repository = "https://github.com/borgesaugusto/shapers"
readme = "README.md"
keywords = ["geometry", "shapes", "circle"]
categories = ["science", "mathematics"]

edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shapers"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module"] }
argmin = "0.10.0"
argmin-math = "0.4.0"
# argmin-observer-slog = "0.1.0"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
blas-src = { version = "0.10", features = ["openblas"] }

[target.'cfg(target_os="windows")'.build-dependencies]
openblas-src = { version = "0.10", features = ["system"] }
[target.'cfg(not(target_os="windows"))'.build-dependencies]
openblas-src = { version = "0.10", features = [] }

