[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "shapers"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Intended Audience :: Science/Research"
]
keywords = ["circle", "shapes", "geometry"]


[tool.maturin]
bindings = "bin"

[project.urls]
Homepage = "https://github.com/borgesaugusto/shapers"
